CHANGED: Implement HTML line wrap prevention through CSS.

--- a/prolog/resource/css/html_ext.css
+++ b/prolog/resource/css/html_ext.css
@@ -27,6 +27,15 @@
   }
 }
 
+/* Prevent wordwrap. */
+.nowrap {
+  white-space: nowrap;
+}
+
+.container-fluid {
+  padding: 0px; /* Overrule Bootstrap 4. */
+}
+
 a,
 a:active,
 a:focus,
